--- a/scss/global.scss
+++ b/scss/global.scss
@@ -4,7 +4,7 @@ body {
     display: grid;
     place-items: center;
     min-height: 100vh;
-    padding: 3rem;
+    padding: 3em 1em;
 }
 
 footer {
