--- a/scss/global.scss
+++ b/scss/global.scss
@@ -4,11 +4,103 @@ body {
     display: grid;
     place-items: center;
     min-height: 100vh;
-    padding: 3em 1em;
+    padding: 5em 2em;
+}
+
+h2 {
+    --fs-special: 2.5em;
+
+    margin-block: 1em;
+
+    font-family: var(--font-family-secondary);
+    font-weight: var(--fw-bold);
+    font-size: var(--fs-special);
+    color: var(--clr-neutral-200);
+
+    text-transform: uppercase;
+}
+
+p {
+    margin-block-end: 2em;
+}
+
+button {
+    padding: 0.6em 2em;
+    background-color: var(--background-color);
+    border-radius: 3em;
+    border: 2px solid var(--background-color);
+    cursor: pointer;
+}
+
+main {
+    @include breakpoint {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 60em;
+    }
+}
+
+section {
+    --border-radius: 0.5em;
+
+    padding: 3em;
+    background-color: var(--clr-primary);
+    line-height: 1.5em;
+
+    &:nth-of-type(1) {
+        border-radius: var(--border-radius) var(--border-radius) 0 0;
+
+        @include breakpoint {
+            border-radius: var(--border-radius) 0 0 var(--border-radius);
+        }
+
+        button {
+            color: var(--clr-primary);
+
+            &:hover,
+            &:focus {
+                color: var(--background-color);
+                background-color: var(--clr-primary);
+            }
+        }
+    }
+
+    &:nth-of-type(2) {
+        background-color: var(--clr-secondary);
+
+        button {
+            color: var(--clr-secondary);
+
+            &:hover,
+            &:focus {
+                color: var(--background-color);
+                background-color: var(--clr-secondary);
+            }
+        }
+    }
+
+    &:nth-of-type(3) {
+        background-color: var(--clr-secondary-dark);
+        border-radius: 0 0 var(--border-radius) var(--border-radius);
+
+        @include breakpoint {
+            border-radius: 0 var(--border-radius) var(--border-radius) 0;
+        }
+
+        button {
+            color: var(--clr-secondary-dark);
+
+            &:hover,
+            &:focus {
+                color: var(--background-color);
+                background-color: var(--clr-secondary-dark);
+            }
+        }
+    }
 }
 
 footer {
-    padding-block: 1.5rem;
+    margin-block: 4em;
     font-size: var(--fs-attribution);
     text-align: center;
     font-weight: var(--fw-medium);
