--- a/scss/imports/_defaults.scss
+++ b/scss/imports/_defaults.scss
@@ -2,13 +2,15 @@
     /* FONTS */
     @font-face {
         font-family: "Big Schoulders Display";
-        src: url("../../assets/fonts/BigShouldersDisplay.ttf");
+        src: url("../../assets/fonts/BigShouldersDisplay.ttf")
+            format("truetype");
         font-weight: 700;
         font-display: swap;
     }
     @font-face {
         font-family: "Lexend Deca";
-        src: url("../../assets/fonts/LexendDeca-VariableFont_wght.ttf");
+        src: url("../../assets/fonts/LexendDeca-VariableFont_wght.ttf")
+            format("truetype");
         font-weight: 400;
         font-display: swap;
     }
